Videos :: Fix bug with title and description being hidden by video in absolute position

--- a/app/assets/stylesheets/pages/_post.sass
+++ b/app/assets/stylesheets/pages/_post.sass
@@ -63,6 +63,12 @@
       &:after
         content: ')'
 
+  &__video__figcaption
+    margin-top: 1.6rem
+    padding: 0 1rem
+    .post__video__title
+      color: $primary-color
+      font-size: 1.2rem
   &__video__figure
     margin: 0 auto
   &__audio__figure
